<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Le Colisée</string>
    <string name="title_activity_film">FilmActivity</string>

    <string name="defaultImageDescription">Poster</string>
    <string name="defaultTitle">Titre</string>
    <string name="defaultSubtitle">Sous-Titre</string>
    <string name="defaultDirectors">Réalisateurs</string>
    <string name="defaultActors">Acteurs</string>
    <string name="defaultSynopsis">Synopsis</string>
    <string name="defaultShowings">Pas de séances aujourd\'hui</string>
    <string name="defaultRatings">Notes</string>

    <string name="nextShowing">Prochaine séance</string>
    <string name="nextShowings">Prochaines séances</string>
    <string name="journalists">Presse</string>
    <string name="viewers">Spectateurs</string>

    <string name="descriptionCover">Poster</string>

    <string name="noInternet">Pas de connexion Internet</string>
    <string name="retry">REESSAYER</string>

</resources>
