<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/medium"
    android:layout_marginEnd="@dimen/screen_margin"
    android:layout_marginRight="@dimen/screen_margin"
    android:layout_marginStart="@dimen/screen_margin"
    android:layout_marginLeft="@dimen/screen_margin"
    android:layout_marginTop="@dimen/medium"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/defaultSubtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/directors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultDirectors"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/actors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/defaultActors"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/synopsis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large"
        android:text="@string/defaultSynopsis"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/ratings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/defaultRatings"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <LinearLayout
        android:id="@+id/ratingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/journalists"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <RatingBar
            android:id="@+id/ratingsJournalists"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/viewers"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <RatingBar
            android:id="@+id/ratingViewers"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.1" />

    </LinearLayout>

    <TextView
        android:id="@+id/nextShowings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/nextShowings"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/showings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/large"
        android:text="@string/defaultShowings"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />


</LinearLayout>